--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bb-provider-music-info",
+  "name": "bb-provider-movie",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
